# blinkt

./: .coveragerc  .gitignore  Dockerfile  README.md  install.sh  pyproject.toml  requirements-examples.txt
.github/workflows/: test.yml
blinkt/: __init__.py
documentation/: REFERENCE.md
examples/: 1d_tetris.py  README.md  anvil-app-blinkt.json  anvil-colour-control.py  anvil_colour_control.py  binary_clock.py  binary_clock_meld.py  blinkt_thermo.py  candle.py  cheerlights.py  cpu_load.py  cpu_temp.py  eyedropper.py  fake_blinkt.py  gradient_graph.py  graph.py  half.py  homekit-sample-config.json  homekit.py  homekit_multi-sample-config.json  homekit_multi.py  homekit_patterns-sample-config.json  homekit_patterns.py  kitt.py  kitt_car_strobe.py  larson.py  larson_hue.py  max.py  mem_load.py  morse_code.py  mqtt.py  new_rgb.py  off.py  pulse.py  pylon.py  python2_only.txt  rainbow.py  rainbow_cycle.py  rampup.py  random_blink.py  (+14 more)
examples/extra_examples/: README.md  drum_hits.py  pov_rainbow.py  spirit_level.py
extra_examples/: drum_hits.py  pov_rainbow.py  spirit_level.py
library_c/: MANIFEST.in  Makefile  blinkt  blinkt.i  setup.py
library_c/lib/: blinkt.c  blinkt.h
packaging/: CHANGELOG  checkdeb.sh  makeall.sh  makedeb.sh  makedoc.sh  makelog.sh
packaging/debian/: README  changelog  control  copyright  rules
packaging/debian/source/: options
projects/mqtt/: mqtt.py
simulator/: README.md  blinkt.py  blinkt_simulator.py
sphinx/: Makefile  conf.py  index.rst  sphinx-build
sphinx/_static/: custom.css
tests/: conftest.py  test_setup.py
